Fix footer elements align

--- a/styles.css
+++ b/styles.css
@@ -292,6 +292,7 @@ footer {
 
 .legal {
     align-items: center;
+    justify-content: flex-end;
 }
 
 @media only screen and (max-width: 960px) {
